--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "backend-task",
+  "name": "market-data-extractor",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "System to extract live share market data using IIFL APIs",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "axios": "^1.4.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "mssql": "^9.0.0",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/mssql": "^9.1.5",
+    "@types/node": "^20.5.7",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
-  
 }
